style(home): mobile hd optimize 1370x720
diminuida as fontes e colocado padding em volta.

--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,14 @@
     <meta property="og:url" content="https://efraimandrade.work/">
     <meta property="og:title" content="Efraim Andrade - Web and Mobile Developer">
     <meta property="og:description" content="That's my personal site to spread my work as a developer">
-    <meta property="og:image" content="https://efraimandrade.work/static/media/avatar.8c21e118.jpg">
+    <meta property="og:image" content="https://efraimandrade.work/static/media/efraim-illustration.fb487c49.jpeg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://efraimandrade.work/">
     <meta property="twitter:title" content="Efraim Andrade - Web and Mobile Developer">
     <meta property="twitter:description" content="That's my personal site to spread my work as a developer">
-    <meta property="twitter:image" content="https://efraimandrade.work/static/media/avatar.8c21e118.jpg">
+    <meta property="twitter:image" content="https://efraimandrade.work/static/media/efraim-illustration.fb487c49.jpeg">
 
     <meta name="theme-color" content="#17181F" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
